[package]
name = "flyswap-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flyswap_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# idl-build = ["anchor-lang/idl-build"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
mpl-core ={ version="0.9.1", features = ["anchor"]}
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1" }
session-keys = { version = "2.0.5", features = ["no-entrypoint"] }
solana-program = "1.18"
spl-token-2022 = { version = "3.0.4", features = [ "no-entrypoint" ] }
spl-token = { version = "4.0.3", features = [ "no-entrypoint" ] }
spl-token-metadata-interface = { version = "0.3.5"}
spl-type-length-value = "0.4.6"
spl-program-error = "0.4.4"

# [dependencies]
# anchor-lang ={version = "0.30.1"}
# anchor-spl = {version="0.30.1", features = ["anchor"]}
# mpl-core ={ version="0.9.1"}
# solana-program = "1.18.26"

